[project]
name = "kuznets-curve"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Juliette Bornier", email = "juliette.bornier.3110@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "numpy>=2.0.0",
    "dbnomics>=1.2.5",
    "streamlit>=1.36.0",
    "black>=24.4.2",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "streamlit-extras>=0.4.3",
    "streamlit-theme>=0.58.0",
    "streamlit-option-menu>=0.3.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kuznets_curve"]
